deployment/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: memorybox-fe
  labels:
    app: memorybox-fe
spec:
  selector:
    matchLabels:
      app: memorybox-fe
  replicas: 1
  template:
    metadata:
      name: memorybox-fe
      labels:
        app: memorybox-fe
    spec:
      containers:
        - name: memorybox-fe
          image: docker.io/hyeonkyo/memorybox-fe:1.0.0
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
            volumeMounts:
            - name: image-data-app
              mountPath: /usr/share/nginx/html/image
              readOnly: true
      volumes:
        - name: image-data-app
          persistentVolumeClaim:
            claimName: memory-box-app
            readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  name: memorybox-fe
spec:
  type: ClusterIP
  selector:
    app: memorybox-fe
  ports:
    - name: memorybox-fe
      port: 8080
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorybox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: memorybox-ikujo.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: memorybox-fe
                port: 
                  number: 8080
